# lithos-kernel

./: .gitignore  Cargo.toml  README.md  RUNNING.md  run.sh
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/drivers/: ata.rs  mod.rs
src/drivers/block/: mod.rs  ramdisk.rs
src/elf/: mod.rs
src/shell/: mod.rs
src/syscall/: mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  scheduler.rs
src/vfs/: fd_table.rs  inode.rs  mod.rs  ops.rs  ramfs.rs
src/vfs/devfs/: mod.rs
src/vfs/fat32/: mod.rs  structs.rs
tests/: basic_boot.rs  breakpoint.rs  stack_overflow.rs
